//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String [not null]
  image String [not null]
  email String [unique, not null]
  birthDate DateTime
  gender UserGender
  dietaryPreference DietaryPreference
  country String
  state String
  metricUnit String
  height String
  weight String
  goal Goals
  physicalActivity PhysicalActivityLevel
  status UserStatus [default: 'ACTIVE']
  role UserRole [not null, default: 'USER']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Afflictions AfflictionUser [not null]
  IncludedFoods IncludedFoodUser [not null]
  ExcludedFoods ExcludedFoodUser [not null]
  SavedMenus SavedMenu [not null]
  HealthIndicators HealthIndicatorUser [not null]
  Activities ActivityUser [not null]
  Auth Auth
}

Table Auth {
  id String [pk]
  userId String [unique, not null]
  authType AuthType [not null]
  passwordHash String
  googleId String
  isVerified Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  Sessions Session [not null]
}

Table Session {
  id String [pk]
  authId String [not null]
  refreshToken String [unique, not null]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  auth Auth [not null]
}

Table Affliction {
  id String [pk]
  name String [unique, not null]
  Users AfflictionUser [not null]
}

Table AfflictionUser {
  id String [pk]
  userId String [not null]
  afflictionId String [not null]
  user User [not null]
  affliction Affliction [not null]
}

Table Food {
  id String [pk]
  name String [unique, not null]
  category FoodCategory
  IncludedUsers IncludedFoodUser [not null]
  ExcludedUsers ExcludedFoodUser [not null]
}

Table IncludedFoodUser {
  id String [pk]
  userId String [not null]
  foodId String [not null]
  state Boolean [not null, default: true]
  user User [not null]
  food Food [not null]
}

Table ExcludedFoodUser {
  id String [pk]
  userId String [not null]
  foodId String [not null]
  state Boolean [not null, default: true]
  user User [not null]
  food Food [not null]
}

Table SavedMenu {
  id String [pk]
  userId String [not null]
  date DateTime [not null]
  breakfast Json
  snack1 Json
  lunch Json
  snack2 Json
  dinner Json
  user User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table HealthIndicatorUser {
  id String [pk]
  userId String [not null]
  weight Float
  height Float
  bmi Float
  bodyType BodyType
  bodyFat Float
  bodyWater Float
  bodyProtein Float
  basalMetabolism Float
  visceralFat Float
  boneMass Float
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
}

Table Activity {
  id String [pk]
  name String [unique, not null]
  includesSteps Boolean [not null]
  ActivityUser ActivityUser [not null]
}

Table ActivityUser {
  id String [pk]
  userId String [not null]
  activityId String [not null]
  steps Int
  caloriesBurned Float
  distanceMeters Float
  activeMinutes Int
  activeHours Int
  startDateTime DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  user User [not null]
  activity Activity [not null]
}

Enum PhysicalActivityLevel {
  SEDENTARY
  LIGHT
  MODERATE
  ACTIVE
  VERY_ACTIVE
}

Enum AuthType {
  EMAIL
  GOOGLE
}

Enum UserStatus {
  ACTIVE
  BANNED
}

Enum UserRole {
  USER
  ADMIN
}

Enum UserGender {
  MALE
  FEMALE
  OTHER
}

Enum FoodCategory {
  FRUITS
  VEGETABLES
  GRAINS
  PROTEINS
  DAIRY
  LEGUMES
  NUTS_SEEDS
  FATS_OILS
  SWEETS_DESSERTS
  BEVERAGES
  HERBS_SPICES
}

Enum DietaryPreference {
  VEGAN
  VEGETARIAN
  GLUTEN_FREE
  KETO
  PALEO
  HALAL
  KOSHER
  NONE
}

Enum Goals {
  lose_weight
  gain_muscle
  maintain_health
  increase_energy
  improve_digestion
  balanced_diet
}

Enum BodyType {
  ECTOMORPH
  SLENDER
  ATHLETIC
  THICK_SET
  STOCKY
  HEAVYSET
  OBESE
}

Ref: Auth.userId - User.id

Ref: Session.authId > Auth.id

Ref: AfflictionUser.userId > User.id

Ref: AfflictionUser.afflictionId > Affliction.id

Ref: IncludedFoodUser.userId > User.id

Ref: IncludedFoodUser.foodId > Food.id

Ref: ExcludedFoodUser.userId > User.id

Ref: ExcludedFoodUser.foodId > Food.id

Ref: SavedMenu.userId > User.id

Ref: HealthIndicatorUser.userId > User.id

Ref: ActivityUser.userId > User.id

Ref: ActivityUser.activityId > Activity.id